--- a/cliente-web/src/views/layout.ejs
+++ b/cliente-web/src/views/layout.ejs
@@ -8,22 +8,24 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="/public/styles.css">
 </head>
+<style>
+    .Titulo {
+        color: #ffffff;
+    }
+</style>
 <body>
     <header class="topbar">
-        <h1>Robot Client</h1>
+        <h1 class="Titulo">Robot Client</h1>
         <nav>
             <% if (user) { %>
                 <a href="/panel">🏠 Panel</a>
                 <a href="/routines">🔧 Rutinas</a>
-                <a href="/learning">🎓 Aprendizaje</a>
                 <% if (user.role === 'ADMIN') { %>
                     <a href="/panel/users">👥 Usuarios</a>
                 <% } %>
                 <form method="post" action="/logout" style="display:inline; margin-left: 1rem;">
                 <button type="submit">Logout (<%= user.username %>)</button>
                 </form>
-            <% } else { %>
-                <a href="/login">Login</a>
             <% } %>
         </nav>
     </header>
