El rol usuario no tiene boton para conectar el robot.

--- a/cliente-web/src/views/panel/index.ejs
+++ b/cliente-web/src/views/panel/index.ejs
@@ -106,7 +106,7 @@
                             <% } %>
                         </div>
                     </div>
-                    
+                    <% if (user.role === 'ADMIN') { %>
                     <div class="row mb-3">
                         <div class="col-12">
                             <% if (status && status.connected) { %>
@@ -122,7 +122,7 @@
                             <% } %>
                         </div>
                     </div>
-
+                    <% } %>
                     <div class="row mb-3">
                         <div class="col-12">
                             <form method="post" action="/robot/homing" class="d-inline">
